<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".MoviesFragment">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="156dp"
            android:layout_height="172dp"
            android:contentDescription="@string/app_name"
            android:paddingBottom="8dp"
            />

        <TextView
            android:id="@+id/label_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_image"
            android:text="@string/label_text_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_movie_title"
            android:paddingBottom="8dp"
            android:text="@string/app_name"
            android:textColor="@color/textPrimaryColor"
            android:textSize="48sp"/>

        <TextView
            android:id="@+id/label_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_title"
            android:text="@string/label_text_vote_average"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/movie_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_vote_average"
            android:paddingBottom="8dp"
            android:textSize="34sp"
            android:text="@string/vote_average_reference"
            android:textColor="@color/textPrimaryColor" />

        <TextView
            android:id="@+id/label_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_vote_average"
            android:text="@string/label_text_release_date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_release_date"
            android:paddingBottom="8dp"
            android:textSize="24sp"
            android:text="@string/release_date_reference"
            android:textColor="@color/textPrimaryColor" />

        <TextView
            android:id="@+id/label_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_release_date"
            android:text="@string/text_label_overview"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_overview"
            android:text="@string/lorem_ipsum"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/textPrimaryColor"
            android:textSize="20sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>